// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Add prisoners container should pass props correctly 1`] = `
<Connect(Page)
  alwaysRender={true}
  title="Add prisoners"
>
  <p>
     Upload the prison numbers for all prisoners attending the below appointment. 
  </p>
  <styled.div>
    <styled.div />
    <AppointmentDetails
      appointmentType="ACC"
      appointmentTypeDescription="Activities"
      comments="test comment"
      counts="2"
      endTime=""
      locationDescription="Gym"
      locationId={1}
      recurring={true}
      repeats="DAILY"
      startTime="2019-10-10T:21:00:00Z"
      times="1"
    />
    <styled.div />
    <OffenderUpload
      agencyId="LEI"
      onCancel={[Function]}
      onError={[Function]}
      onSuccess={[Function]}
      showCancelButton={true}
    />
    <styled.div />
    <AddPrisoners
      appointment={
        Object {
          "appointmentType": "ACC",
          "appointmentTypeDescription": "Activities",
          "comments": "test comment",
          "counts": "2",
          "locationDescription": "Gym",
          "locationId": 1,
          "recurring": true,
          "repeats": "DAILY",
          "startTime": "2019-10-10T:21:00:00Z",
          "times": "1",
        }
      }
      date={null}
      dispatchAppointmentPrisoners={[Function]}
      error=""
      now={"2019-10-10T21:00:00.000Z"}
      offenders={Array []}
      onCancel={[Function]}
      onError={[Function]}
      onSuccess={[Function]}
      resetErrors={[Function]}
      startTime="2019-10-10T:21:00:00Z"
    />
  </styled.div>
</Connect(Page)>
`;

exports[`Add prisoners container should render completed view 1`] = `
<Connect(Page)
  alwaysRender={true}
  title="Add prisoners"
>
  <withRouter(ScrollToTop)
    always={true}
  >
    <H3>
       
      2
       appointments created 
    </H3>
    <styled.div />
    <AppointmentDetails
      appointmentType="ACC"
      appointmentTypeDescription="Activities"
      comments="test comment"
      counts="2"
      endTime=""
      locationDescription="Gym"
      locationId={1}
      recurring={false}
      repeats="DAILY"
      startTime="2019-10-10T:21:00:00Z"
      times="1"
    />
    <styled.div />
    <styled.div>
      <ForwardRef
        disabled={false}
        onClick={[Function]}
        start={false}
      >
        Add another appointment
      </ForwardRef>
      <ForwardRef
        buttonColour="#dee0e2"
        buttonTextColour="#0b0c0c"
        disabled={false}
        onClick={[Function]}
        start={false}
      >
        Back to home page
      </ForwardRef>
    </styled.div>
  </withRouter(ScrollToTop)>
</Connect(Page)>
`;

exports[`Add prisoners container should render completed view for recurring 1`] = `
<Connect(Page)
  alwaysRender={true}
  title="Add prisoners"
>
  <withRouter(ScrollToTop)
    always={true}
  >
    <H3>
       Appointments created 
    </H3>
    <styled.div />
    <AppointmentDetails
      appointmentType="ACC"
      appointmentTypeDescription="Activities"
      comments="test comment"
      counts="2"
      endTime=""
      locationDescription="Gym"
      locationId={1}
      recurring={true}
      repeats="DAILY"
      startTime="2019-10-10T:21:00:00Z"
      times="1"
    />
    <styled.div />
    <styled.div>
      <ForwardRef
        disabled={false}
        onClick={[Function]}
        start={false}
      >
        Add another appointment
      </ForwardRef>
      <ForwardRef
        buttonColour="#dee0e2"
        buttonTextColour="#0b0c0c"
        disabled={false}
        onClick={[Function]}
        start={false}
      >
        Back to home page
      </ForwardRef>
    </styled.div>
  </withRouter(ScrollToTop)>
</Connect(Page)>
`;
